# DoctorPill

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
src/Core/: CMakeLists.txt  doctorpill.cpp  doctorpill.h  doctorpill_global.h.in
src/Core/DoctorPillCore/: doctor.cpp  doctor.h  doctortest.cpp  doctortest.h  ipill.cpp  ipill.h
src/Example/: CMakeLists.txt  Main.qml  main.cpp
src/Example/Deploy/: DoctorPill.json  DoctorPill.json.in
src/GUI/: CMakeLists.txt  DoctorPillRes.qrc  doctorpill_gui_global.h.in  doctorpillgui.cpp  doctorpillgui.h
src/GUI/DoctorPillGui/: doctormodel.cpp  doctormodel.h
src/GUI/DoctorPillModule/: DoctorView.qml  qmldir
src/GUI/languages/: en.ts  ru.ts
tests/: CMakeLists.txt  tstMain.cpp
tests/units/: basetest.cpp  basetest.h
